--- a/css/responsive.css
+++ b/css/responsive.css
@@ -536,13 +536,14 @@
     padding-top: 50px;
   }
   .choose-sec .img-holder {
-    width: 100%;
-    float: none;
-    margin: 0 0 20px;
+    width: calc(50% - 20px);
+    /*float: none;*/
+    /*margin: 0 0 20px;*/
   }
   .choose-sec .img-holder:first-child {
-    width: 100%;
+    width: calc(50% - 0px);
     padding: 0;
+    margin-right: 10px;
   }
   .choose-sec .img-holder img {
     width: 100%;
