--- a/style.css
+++ b/style.css
@@ -4625,6 +4625,10 @@ a:hover, a:focus, a.active {
   margin-bottom: 0;
 }
 
+.mt-10{
+  margin-top: 10px;
+}
+
 /*-- Responsive CSS --*/@media (max-width: 1399.98px) {  }
 
 @media (max-width: 1199.98px) {}
