--- a/style.css
+++ b/style.css
@@ -4644,6 +4644,16 @@ a:hover, a:focus, a.active {
   .about-img{
     display: none;
   }
+
+  .socail-network-top{
+    display: none;
+  }
+
+  .contact-list-top{
+    margin-bottom: 0!important;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 @media only screen and (max-width: 576px) {
